--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "medical appointment app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "bobo",
   "license": "ISC",
@@ -12,8 +13,6 @@
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "mongodb": "^2.2.25",
-    "mongoose": "^4.9.1",
     "mysql": "^2.13.0",
   }
 }
