--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "mysql": "^2.13.0",
+    "mysql": "^2.13.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git.heroku.com/remembrance-leaf-20424.git"
   }
 }
