--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "repository": {
     "type": "git",
     "url": "git.heroku.com/remembrance-leaf-20424.git"
+  },
+  "engines": {
+    "node": "6.11.0"
+    
   }
 }
