--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
-    "express": "^4.15.2",
-    "mysql": "^2.13.0"
+    "express": "^4.15.2"
   },
   "repository": {
     "type": "git",
@@ -21,6 +20,5 @@
   },
   "engines": {
     "node": "6.11.0"
-    
   }
 }
